--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,87 @@
+:root {
+    --col-bg: rgb(218, 251, 250);
+    --col-bg-dark: rgb(158, 211, 210);
+    --col-1: rgb(44, 39, 173);
+    --col-2: rgb(172, 12, 12);
+    --col-3: rgb(175, 143, 0);
+}
 body {
-    background-color: rgb(218, 251, 250);
+    background-color: var(--col-bg);
+    margin:0px;
+    padding:0px;
+}
+body::-webkit-scrollbar{
+    width: 10px;
+}
+body::-webkit-scrollbar-track {
+    background: var(--col-bg);
+}
+body::-webkit-scrollbar-thumb {
+    background: var(--col-bg-dark);
+}
+main {
+    margin-left: 80px;
+    padding: 16px;
+}
+nav {
+    width:80px;
+    height:100vh;
+    position:fixed;
+    background-color:var(--col-bg-dark);
+    transition: width 200ms ease;
+}
+nav ul {
+    list-style: none;
+    padding:0px;
+    margin:0px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+nav ul li{
+    width:100%;
+    margin:auto;
+}
+nav ul li a{
+    display:flex;
+    align-items: center;
+    height: 80px;
+    text-decoration: none;
+    color: var(--col-2);
+    transition: 600ms;
+}
+nav ul li a span{
+    display: none;
+    margin-left: 16px;
+}
+nav ul li a svg{
+    min-width: 30px;
+    margin: 0px 24px;
+}
+nav ul li:hover a{
+    color: var(--col-1);
+}
+nav:hover{
+    width:256px;
+}
+nav:hover ul li a span{
+    display:block;
 }
 .primary-text {
-    color: rgb(44, 39, 173);
+    color: var(--col-1);
     font-family: 'Anton' , sans-serif;
 }
 .secondary-text {
-    color: rgb(172, 12, 12);
+    color: var(--col-2);
     font-family: 'Teko', sans-serif;
 }
 .tertiary-text {
-    color: rgb(175, 143, 0);
+    color: var(--col-3);
     font-family: 'Lobster', cursive;
-}
-#logo {
-    width: 100%;
 }
 .content-paragraph{
     font-family: 'Dosis', sans-serif;
 }
-ul{
+main ul{
     list-style:square;
 }
