--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,12 @@ nav ul li a span{
     display: none;
     margin-left: 16px;
 }
-nav ul li a svg,img{
+nav ul li a svg{
+    min-width: 30px;
+    max-height: 30px;;
+    margin: 0px 24px;
+}
+nav ul li a img{
     min-width: 30px;
     max-height: 30px;;
     margin: 0px 24px;
@@ -82,6 +87,7 @@ nav li#logo a img{
     }
     nav ul li#logo a{
         background-color: var(--col-bg-dark);
+        margin: 0px;
     }
     nav ul li{
         height:100%;
