--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,8 @@ nav li#logo a img{
     }
 }
 ul.memes-ul li img {
-    max-width:90%;
+    max-width:90vh;
+    max-height:90vh;
     height: auto;
 }
 .primary-text {
