--- a/includes/nav.html
+++ b/includes/nav.html
@@ -18,5 +18,11 @@
                 <span>Meme page</span>
             </a>
         </li>
+        <li>
+            <a href="./contact">
+                <i class="far fa-user fa-2x"></i>
+                <span>Contact me</span>
+            </a>
+        </li>
     </ul>
 </nav>
