--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,19 @@ ul.memes-ul li img {
     max-height:90vh;
     height: auto;
 }
+ul.contacts-ul li {
+    height: 50px;
+    width: 90%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    padding: 1px;
+}
+ul.contacts-ul li a{
+    color:var(--col-bg);
+    text-decoration: none;
+}
 .primary-text {
     color: var(--col-1);
     font-family: 'Anton' , sans-serif;
