--- a/includes/nav.html
+++ b/includes/nav.html
@@ -24,5 +24,11 @@
                 <span>Contact me</span>
             </a>
         </li>
+        <li>
+            <a href="./bell">
+                <i class="far fa-bell fa-2x"></i>
+                <span>The bell</span>
+            </a>
+        </li>
     </ul>
 </nav>
