--- a/includes/nav.html
+++ b/includes/nav.html
@@ -9,25 +9,25 @@
         <li>
             <a href="./old">
                 <i class="far fa-clock fa-2x"></i>
-                <span>Old page</span>
+                <span class="content-paragraph">Old page</span>
             </a>
         </li>
         <li>
             <a href="./meme">
                 <i class="far fa-laugh fa-2x"></i>
-                <span>Meme page</span>
+                <span class="content-paragraph">Meme page</span>
             </a>
         </li>
         <li>
             <a href="./bell">
                 <i class="far fa-bell fa-2x"></i>
-                <span>The bell</span>
+                <span class="content-paragraph">The bell</span>
             </a>
         </li>
         <li>
             <a href="./contact">
                 <i class="far fa-user fa-2x"></i>
-                <span>Contact me</span>
+                <span class="content-paragraph">Contact me</span>
             </a>
         </li>
     </ul>
