add text tools page

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -25,6 +25,12 @@
             </a>
         </li>
         <li>
+            <a href="./text">
+                <i class="far fa-text-width fa-2x"></i>
+                <span class="content-paragraph">Text tools</span>
+            </a>
+        </li>
+        <li>
             <a href="./contact">
                 <i class="far fa-user fa-2x"></i>
                 <span class="content-paragraph">Contact me</span>
