--- a/includes/nav.html
+++ b/includes/nav.html
@@ -26,7 +26,7 @@
         </li>
         <li>
             <a href="./text">
-                <i class="far fa-text-width"></i>
+                <i class="fas fa-text-width fa-2x"></i>
                 <span class="content-paragraph">Text tools</span>
             </a>
         </li>
