add /docs and ctf rules

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -25,6 +25,12 @@
             </a>
         </li>
         <li>
+            <a href="./docs">
+                <i class="far fa-file-alt"></i>
+                <span class="content-paragraph">Documents</span>
+            </a>
+        </li>
+        <li>
             <a href="./text">
                 <i class="fas fa-text-width fa-2x"></i>
                 <span class="content-paragraph">Text tools</span>
