--- a/includes/nav.html
+++ b/includes/nav.html
@@ -26,7 +26,7 @@
         </li>
         <li>
             <a href="./docs">
-                <i class="far fa-file-alt"></i>
+                <i class="far fa-file-alt fa-2x"></i>
                 <span class="content-paragraph">Documents</span>
             </a>
         </li>
