change old site path to /blog

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -7,7 +7,7 @@
             </a>
         </li>
         <li>
-            <a href="./old">
+            <a href="./blog">
                 <i class="far fa-clock fa-2x"></i>
                 <span class="content-paragraph">Old page</span>
             </a>
