fix nav.html to use /res in logo url

--- a/res/includes/nav.html
+++ b/res/includes/nav.html
@@ -2,7 +2,7 @@
     <ul>
         <li id="logo">
             <a href="./">
-                <img src="./img/logo.png">
+                <img src="./res/img/logo.png">
                 <span class="primary-text">Gigo_G</span>
             </a>
         </li>
