--- a/res/includes/nav.html
+++ b/res/includes/nav.html
@@ -25,9 +25,9 @@
             </a>
         </li>
         <li>
-            <a href="./docs">
-                <i class="far fa-file-alt fa-2x"></i>
-                <span class="content-paragraph">Documents</span>
+            <a href="./projects">
+                <i class="fas fa-project-diagram fa-2x"></i>
+                <span class="content-paragraph">Projects</span>
             </a>
         </li>
         <li>
