move and rename, add old blog to /old

--- a/res/includes/nav.html
+++ b/res/includes/nav.html
@@ -7,7 +7,7 @@
             </a>
         </li>
         <li>
-            <a href="./blog">
+            <a href="./old">
                 <i class="far fa-clock fa-2x"></i>
                 <span class="content-paragraph">Old page</span>
             </a>
@@ -25,7 +25,7 @@
             </a>
         </li>
         <li>
-            <a href="./text">
+            <a href="./text-tools">
                 <i class="fas fa-text-width fa-2x"></i>
                 <span class="content-paragraph">Text tools</span>
             </a>
