--- a/res/css/style.css
+++ b/res/css/style.css
@@ -5,7 +5,7 @@
     --col-1: rgb(44, 39, 173);
     --col-2: rgb(172, 12, 12);
     --col-3: rgb(175, 143, 0);
-    --col-logo: rgb(116, 209, 76);
+    --col-4: rgb(116, 209, 76);
     --transition-speed: 600ms;
 }
 
