change memes to neography

--- a/res/includes/nav.html
+++ b/res/includes/nav.html
@@ -13,9 +13,9 @@
             </a>
         </li>
         <li>
-            <a href="./meme">
-                <i class="far fa-laugh fa-2x"></i>
-                <span class="content-paragraph">Meme page</span>
+            <a href="./neography">
+                <i class="fas fa-pen-fancy fa-2x"></i>
+                <span class="content-paragraph">Neography</span>
             </a>
         </li>
         <li>
