wsid page and other changes

--- a/res/includes/nav.html
+++ b/res/includes/nav.html
@@ -13,15 +13,15 @@
             </a>
         </li>
         <li>
-            <a href="./neography">
-                <i class="fas fa-pen-fancy fa-2x"></i>
-                <span class="content-paragraph">Neography</span>
-            </a>
-        </li>
-        <li>
             <a href="./projects">
                 <i class="fas fa-project-diagram fa-2x"></i>
                 <span class="content-paragraph">Projects</span>
+            </a>
+        </li>
+        <li>
+            <a href="./wsid">
+                <i class="fas fa-pen-fancy fa-2x"></i>
+                <span class="content-paragraph">WSID</span>
             </a>
         </li>
         <li>
