--- a/res/includes/nav.html
+++ b/res/includes/nav.html
@@ -36,5 +36,10 @@
                 <span class="content-paragraph">Contact me</span>
             </a>
         </li>
+        <li id="themeLi">
+            <a id="theme">
+                
+            </a>
+        </li>
     </ul>
 </nav>
